fix overflow in the settings ui (Viewer)

--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,7 @@ body > canvas{
     top: 0;
     bottom:0;
     right: -200px;
-    width: 230px;
     z-index: 1;
-    overflow-y: auto;
-    overflow-x: hidden;
     float: left;
 }
 #settings .opener{
@@ -37,7 +34,6 @@ body > canvas{
     line-height: 30px;
     font-weight: bold;
     font-size: 15px;
-
     width: 30px;
     height: 30px;
     float: left;
@@ -51,6 +47,8 @@ body > canvas{
     font-weight: lighter;
     float: left;
     height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .settingsLine{
     width: 190px;
